--- a/NuGet/ServiceStack.Azure.Core/servicestack.azure.core.nuspec
+++ b/NuGet/ServiceStack.Azure.Core/servicestack.azure.core.nuspec
@@ -4,7 +4,7 @@
     <id>ServiceStack.Azure.Core</id>
     <title>ServiceStack.Azure .NET Standard 2.0</title>
     <version>5.0.0</version>
-    <authors>ServiceStack</authors> 
+    <authors>ServiceStack</authors>
     <owners>ServiceStack</owners>
     <description>
       .NET Standard 2.0 version of ServiceStack.Azure
@@ -13,12 +13,11 @@
     <licenseUrl>https://servicestack.net/terms</licenseUrl>
     <iconUrl>https://servicestack.net/img/logo-32.png</iconUrl>
     <tags>ServiceStack Azure WebServices ServiceBus Cache CacheClient</tags>
-    <language>en-US</language> 
+    <language>en-US</language>
     <copyright>ServiceStack and contributors</copyright>
       <dependencies>
           <group targetFramework=".netstandard2.0">
-              <dependency id="Microsoft.Azure.ServiceBus" version="[2.0.0, )" />
-              <dependency id="Microsoft.Azure.Management.ServiceBus" version="[1.2.0, )" />
+              <dependency id="Microsoft.Azure.ServiceBus" version="[3.1.0-preview, )" />
               <dependency id="WindowsAzure.Storage" version="[9.1.1, )" />
               <dependency id="ServiceStack.Core" version="5.0.0" />
           </group>
